python/test-data/testTypesProtos4.err
untypy.error.UntypyTypeError
given:    2
expected: value of type str

context: bar(s: str) -> int
                ^^^
declared at: test-data/testTypesProtos4.py:15
 13 |         return lambda x: x + 1
 14 | 
 15 > def bar(s: str) -> int:
 16 |     return len(s)
 17 |

caused by: test-data/testTypesProtos4.py:20
 18 | class ConcreteWrong:
 19 |     def meth(self) -> Callable[[int], int]:
 20 >         return lambda x: bar(x) # invalid call of bar with argument of type int
 21 | 
 22 | def foo(obj: Interface) -> int:
